--- a/IterativeSorter/bin/.gitignore
+++ b/IterativeSorter/bin/.gitignore
@@ -1,6 +1,1 @@
-/IntegerArray.class
-/IterativeSorter.class
-/IterativeSorterAnalysis.class
-/IterativeSorterPerformance.class
-/IterativeSorterTest.class
-/SorterUtilities.class
+/SortDebugger.class
