--- a/IterativeSorter/bin/.gitignore
+++ b/IterativeSorter/bin/.gitignore
@@ -1,1 +1,5 @@
-/IterativeStableCheck.class
+/IterativeSorterAnalysis.class
+/IterativeSorterPerformance.class
+/IterativeSorterTest.class
+/SortDebugger.class
+/SorterUtilities.class
